--- a/recipes-kernel/linux/files/sls16xx-wifi-murata-1dx.dtsi
+++ b/recipes-kernel/linux/files/sls16xx-wifi-murata-1dx.dtsi
@@ -5,16 +5,18 @@
  */
 
 / {
-	/* Wi-Fi regulator */
-	reg_wlan: regulator-wlan {
-		compatible = "regulator-fixed";
-		regulator-name = "reg-wlan";
-		regulator-min-microvolt = <3300000>;
-		regulator-max-microvolt = <3300000>;
-		gpio = <&gpio1 5 0>;
-		startup-delay-us = <100>;
-		enable-active-high;
-	};
+	regulators {
+		/* Wi-Fi regulator */
+		reg_wlan: regulator-wlan {
+			compatible = "regulator-fixed";
+			regulator-name = "reg-wlan";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			gpio = <&gpio1 5 0>;
+			startup-delay-us = <100>;
+			enable-active-high;
+		};
+        };
 
 	/* Wi-Fi driver */
 	bcmdhd_wlan_0: bcmdhd_wlan@0 {
